# project_1_itcs_6150

./: .gitignore  Cargo.toml  README.md
docs/: aliases.js  search-index.js  source-files.js  struct.Problem.html
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js
docs/implementors/core/fmt/: trait.Debug.js
docs/project_1/: sidebar-items.js  struct.State.html
src/: main.rs  main_no_comments.rs
